# lgtmcli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  WIP.md
.github/workflows/: ci.yml  release-stable.yml
docs/: releases.md
scripts/: install.sh  smoke-test.sh
skills/lgtmcli/: SKILL.md
src/: main.rs  time.rs
src/app/: config.rs  mod.rs
src/cli/: mod.rs
src/commands/: auth.rs  datasources.rs  logs.rs  metrics.rs  mod.rs  sql.rs  traces.rs
src/grafana/: client.rs  models.rs
src/output/: json.rs  mod.rs  table.rs
tests/: cli.rs
