[package]
name = "lgtmcli"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
humantime = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }

[dev-dependencies]
assert_cmd = "2"
httpmock = "0.8"
predicates = "3"
